--- a/src/flavors/gtopenspace/config.yml
+++ b/src/flavors/gtopenspace/config.yml
@@ -54,14 +54,12 @@ map:
     - id: 10sites
       url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks
       type: landmark
-      slug: site
       sources:
         - "http://a.tiles.mapbox.com/v4/smartercleanup.0f2jhd96/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw"
 
     - id: dvsafestreets
       url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks
       type: landmark
-      slug: site
       sources:
         - "http://a.tiles.mapbox.com/v4/smartercleanup.24e0d2bg/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw"
 
@@ -74,6 +72,10 @@ map:
     - id: gtopenspace2
       type: place
       slug: idea
+
+    - id: gtopenspace1
+      type: place
+      slug: site
 
     - id: vision
       url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks
@@ -149,6 +151,34 @@ place_types:
       icon:
         iconSize: [30, 30]
         iconAnchor: [15, 15]
+
+  openspaceZoomStyle:
+      - condition: '{{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-star.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [60, 60]
+          iconAnchor: [30, 30]
+          shadowSize: [60, 60]
+          shadowAnchor: [30, 30]
+
+      - condition: '{{map.zoom}} < 11'
+        icon:
+          iconUrl: /static/css/images/markers/marker-star.png
+          iconSize: [12, 12]
+          iconAnchor: [6, 6]
+
+      - condition: '{{map.zoom}} < 15'
+        icon:
+          iconUrl: /static/css/images/markers/marker-star.png
+          iconSize: [18, 18]
+          iconAnchor: [9, 9]
+
+      - condition: '{{map.zoom}} >= 15'
+        icon:
+          iconUrl: /static/css/images/markers/marker-star.png
+          iconSize: [30, 30]
+          iconAnchor: [15, 15]    
 
   wetland:
     zoomType: georgetownZoomStyle
@@ -303,11 +333,11 @@ place_types:
           iconUrl: /static/css/images/markers/marker-art.png
 
   zoo:
-    zoomType: mapboxZoomStyle
+    zoomType: openspaceZoomStyle
     rules:
       - condition: 'true'
         icon:
-          iconUrl: /static/css/images/markers/marker-star-maroon.png
+          iconUrl: /static/css/images/markers/marker-star.png
 
   # # needs a marker
   # farm:
@@ -406,12 +436,42 @@ place_types:
           iconSize: [38, 46]
           iconAnchor: [19, 46]
 
-  feature:
-    label: _(Featured site)
+  # feature:
+  #   label: _(Featured site)
+  #   rules:
+  #     - condition: '{{layer.focused}} === true'
+  #       icon:
+  #         iconUrl: /static/css/images/markers/marker-star-maroon.png
+  #         shadowUrl: /static/css/images/marker-shadow.png
+  #         iconSize: [60, 60]
+  #         iconAnchor: [30, 30]
+  #         shadowSize: [60, 60]
+  #         shadowAnchor: [30, 30]
+
+  #     - condition: '{{map.zoom}} < 11'
+  #       icon:
+  #         iconUrl: /static/css/images/markers/marker-star-maroon.png
+  #         iconSize: [12, 12]
+  #         iconAnchor: [6, 6]
+
+  #     - condition: '{{map.zoom}} < 15'
+  #       icon:
+  #         iconUrl: /static/css/images/markers/marker-star-maroon.png
+  #         iconSize: [18, 18]
+  #         iconAnchor: [9, 9]
+
+  #     - condition: '{{map.zoom}} >= 15'
+  #       icon:
+  #         iconUrl: /static/css/images/markers/marker-star-maroon.png
+  #         iconSize: [30, 30]
+  #         iconAnchor: [15, 15]
+
+  park-improvement:
+    label: _(Park improvement)
     rules:
       - condition: '{{layer.focused}} === true'
         icon:
-          iconUrl: /static/css/images/markers/marker-star.png
+          iconUrl: /static/css/images/markers/marker-star-green.png
           shadowUrl: /static/css/images/marker-shadow.png
           iconSize: [60, 60]
           iconAnchor: [30, 30]
@@ -420,22 +480,52 @@ place_types:
 
       - condition: '{{map.zoom}} < 11'
         icon:
-          iconUrl: /static/css/images/markers/marker-star.png
+          iconUrl: /static/css/images/markers/marker-star-green.png
           iconSize: [12, 12]
           iconAnchor: [6, 6]
 
       - condition: '{{map.zoom}} < 15'
         icon:
-          iconUrl: /static/css/images/markers/marker-star.png
+          iconUrl: /static/css/images/markers/marker-star-green.png
           iconSize: [18, 18]
           iconAnchor: [9, 9]
 
       - condition: '{{map.zoom}} >= 15'
         icon:
-          iconUrl: /static/css/images/markers/marker-star.png
+          iconUrl: /static/css/images/markers/marker-star-green.png
           iconSize: [30, 30]
           iconAnchor: [15, 15]
 
+
+  streetscape:
+    label: _(Streetscape)
+    rules:
+      - condition: '{{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-star-maroon.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [60, 60]
+          iconAnchor: [30, 30]
+          shadowSize: [60, 60]
+          shadowAnchor: [30, 30]
+
+      - condition: '{{map.zoom}} < 11'
+        icon:
+          iconUrl: /static/css/images/markers/marker-star-maroon.png
+          iconSize: [12, 12]
+          iconAnchor: [6, 6]
+
+      - condition: '{{map.zoom}} < 15'
+        icon:
+          iconUrl: /static/css/images/markers/marker-star-maroon.png
+          iconSize: [18, 18]
+          iconAnchor: [9, 9]
+
+      - condition: '{{map.zoom}} >= 15'
+        icon:
+          iconUrl: /static/css/images/markers/marker-star-maroon.png
+          iconSize: [30, 30]
+          iconAnchor: [15, 15]
 
 # Sidebar and activity stream should be enabled and disabled together!
 # note: sidebar is aka 'MasterLegend'
@@ -468,6 +558,10 @@ sidebar:
               title: _(Priority Sites)
               visibleDefault: true
 
+            - id: gtopenspace1
+              title: _(Original 29 sites)
+              visibleDefault: false
+
             - id: dvsafestreets
               title: _(Duwamish Valley Safe Streets)
               visibleDefault: false
@@ -486,7 +580,7 @@ sidebar:
 
             - id: restoration
               title: _(Restoration Sites)
-              visibleDefault: true
+              visibleDefault: false
 
         - id: grp-land
           title: _(Land Data)
@@ -633,12 +727,31 @@ place:
           display_prompt:
           placeholder: _(Enter comment...)
           optional: true
-
-    - category: feature
+    - category: streetscape
       includeOnForm: false
       name: location_type
-      dataset: gtopenspace2
-      icon_url: /static/css/images/markers/marker-star.png
+      dataset: gtopenspace1
+      icon_url: /static/css/images/markers/marker-star-maroon.png
+      value: feature
+      label: _(Featured site)
+      fields:
+        - name: title
+          type: text
+          prompt: _(Title:)
+          display_prompt: _(Title:)
+          placeholder: _(Enter title...)
+          optional: true
+        - name: comment
+          type: textarea
+          prompt: _(Comment:)
+          display_prompt:
+          placeholder: _(Enter comment...)
+          optional: true
+    - category: park-improvement
+      includeOnForm: false
+      name: location_type
+      dataset: gtopenspace1
+      icon_url: /static/css/images/markers/marker-star-green.png
       value: feature
       label: _(Featured site)
       fields:
